fixed gap issue in woods/metrics container

--- a/client/src/assets/scss/stylesheets/projectMetrics.scss
+++ b/client/src/assets/scss/stylesheets/projectMetrics.scss
@@ -6,6 +6,7 @@
   align-items: center;
   flex-flow: row wrap;
   margin: 1rem auto;
+  gap: 2rem;
 }
 
 .show-metrics-container {
